--- a/app/src/main/res/anim/bottom_animation.xml
+++ b/app/src/main/res/anim/bottom_animation.xml
@@ -2,13 +2,13 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
+        android:duration="1500"
         android:fromXDelta="0%"
-        android:fromYDelta="100%"
-        android:duration="1500"/>
+        android:fromYDelta="50%" />
 
     <alpha
+        android:duration="1500"
         android:fromAlpha="0.1"
-        android:toAlpha="1.0"
-        android:duration="1500"/>
+        android:toAlpha="1.0" />
 
 </set>
