Recycler View implementation for Question, User responses are pending

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -104,4 +104,10 @@
         android:text="Already have an account? LogIn"
         android:background="#00000000"/>
 
+    <Button
+        android:id="@+id/btnquestion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Get Question" />
+
 </LinearLayout>
