--- a/app/src/main/res/layout/custom_question.xml
+++ b/app/src/main/res/layout/custom_question.xml
@@ -1,5 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="130dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/cardview_shadow_start_color"
+    android:layout_marginTop="5dp"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="3dp"
+    app:cardMaxElevation="@dimen/cardview_default_radius"
+    app:cardCornerRadius="10dp">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="4dp">
+
+        <TextView
+            android:id="@+id/questionId"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="28sp"
+            android:text="hello There"/>
+
+        <LinearLayout
+            android:layout_below="@+id/questionId"
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            >
+            <RadioGroup
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:layout_marginHorizontal="0dp"
+                >
+
+                <RadioButton
+                    android:id="@+id/option1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:cursorVisible="true"
+                    android:text="radiobutton1"
+                    android:textSize="20dp"/>
+
+                <RadioButton
+                    android:id="@+id/option2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="15dp"
+                    android:text="radiobutton1"
+                    android:textSize="20dp"/>
+
+            </RadioGroup>
+        </LinearLayout>
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
