--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -12,5 +12,15 @@
         android:padding="3dp"
         android:layout_height="match_parent"/>
 
+    <Button
+        android:id="@+id/myquestionResponse"
+        android:layout_marginTop="750dp"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentBottom="true"
+        android:text="SUBMIT RESPONSE"
+        />
 
 </RelativeLayout>
