--- a/app/src/main/res/layout/custom_question.xml
+++ b/app/src/main/res/layout/custom_question.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="130dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,6 +12,7 @@
     app:cardCornerRadius="10dp">
 
     <RelativeLayout
+        android:id="@+id/myQuestionblock"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="4dp">
@@ -23,37 +25,32 @@
             android:text="hello There"/>
 
         <LinearLayout
+            android:id="@+id/myoptionslayout"
             android:layout_below="@+id/questionId"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="wrap_content"
             >
             <RadioGroup
-
+                android:id="@+id/myradiooptionsgroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="10dp"
                 android:layout_marginHorizontal="0dp"
                 >
-
-                <RadioButton
-                    android:id="@+id/option1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:cursorVisible="true"
-                    android:text="radiobutton1"
-                    android:textSize="20dp"/>
-
-                <RadioButton
-                    android:id="@+id/option2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="15dp"
-                    android:text="radiobutton1"
-                    android:textSize="20dp"/>
-
             </RadioGroup>
+
         </LinearLayout>
+
     </RelativeLayout>
+    <Button
+        android:id="@+id/myquestionResponse"
+        android:layout_below="@id/myQuestionblock"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="500dp"
+        android:text="SUBMIT RESPONSE"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        tools:ignore="NotSibling" />
 </androidx.cardview.widget.CardView>
