--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/login"
-        android:title="Login"/>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/hospitalList"
+            android:title="Hospital List" />
 
-    <item android:id="@+id/register"
-        android:title="Register"/>
+        <item
+            android:id="@+id/questionList"
+            android:title="Covid Questionnaire" />
+    </group>
+    <item android:title="Profile">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/login"
+                    android:title="Login" />
 
-    <item android:id="@+id/profile"
-        android:title="Profile"/>
-    <item android:id="@+id/logout"
-        android:title="Logout"/>
+                <item
+                    android:id="@+id/register"
+                    android:title="Register" />
+
+                <item
+                    android:id="@+id/profile"
+                    android:title="Profile" />
+
+                <item
+                    android:id="@+id/logout"
+                    android:title="Logout" />
+            </group>
+        </menu>
+
+    </item>
 
 </menu>
