--- a/app/src/main/res/layout/custom_slot.xml
+++ b/app/src/main/res/layout/custom_slot.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/time_slot_card"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/time_slot_card"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="25dp"
+    app:cardBackgroundColor="@color/cardview_shadow_start_color"
     app:cardCornerRadius="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/slotText"
-            android:text="10am - 11am"
-            android:padding="5dp"
-            android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-            android:textSize="12sp"/>
         <TextView
+            android:id="@+id/slotText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/slotAvailableText"
-            android:text="Available"
-            android:padding="5dp"
             android:gravity="center_horizontal"
-            android:textSize="15sp"/>
+            android:padding="5dp"
+            android:text="10am - 11am"
+
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/slotAvailableText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:padding="5dp"
+            android:text="Available"
+            android:textSize="15sp" />
     </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
