--- a/app/src/main/res/layout/custom_question.xml
+++ b/app/src/main/res/layout/custom_question.xml
@@ -4,41 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    app:cardBackgroundColor="@color/cardview_shadow_start_color"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="3dp"
-    app:cardMaxElevation="@dimen/cardview_default_radius"
-    app:cardUseCompatPadding="true">
+    app:cardBackgroundColor="@color/color_white"
+    app:cardCornerRadius="@dimen/common_8_dp"
+    app:cardElevation="@dimen/common_5_dp"
+    android:elevation="@dimen/common_2_dp"
+    android:layout_margin="@dimen/common_12_dp"
+    android:clipToPadding="false"
+    app:cardUseCompatPadding="false">
 
     <RelativeLayout
         android:id="@+id/myQuestionblock"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/questionId"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:text="hello There"
-            android:textSize="28sp" />
+            android:fontFamily="@font/gotham_book"
+            android:layout_margin="@dimen/common_12_dp"
+            android:textColor="#474747"
+            android:lineSpacingExtra="4sp"
+            android:textSize="@dimen/h3" />
 
         <LinearLayout
             android:id="@+id/myoptionslayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/questionId"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:layout_margin="@dimen/common_8_dp"
+            android:orientation="horizontal">
 
             <RadioGroup
                 android:id="@+id/myradiooptionsgroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="0dp"
-                android:orientation="vertical"
-                android:padding="10dp"></RadioGroup>
+                android:orientation="horizontal">
+            </RadioGroup>
 
         </LinearLayout>
 
