--- a/app/src/main/res/layout/activity_covid_questionnaire_redirection.xml
+++ b/app/src/main/res/layout/activity_covid_questionnaire_redirection.xml
@@ -49,10 +49,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="320dp"
                 android:layout_below="@id/chartCard"
-                android:layout_marginTop="5dp"
-                app:cardElevation="2dp"
-                app:cardMaxElevation="5dp"
-                app:contentPadding="2dp">
+                android:layout_marginTop="@dimen/common_5_dp"
+                app:cardElevation="@dimen/common_4_dp"
+                android:clipToPadding="false"
+                android:elevation="@dimen/common_2_dp"
+                app:cardMaxElevation="@dimen/common_5_dp"
+                >
 
                 <ScrollView
                     android:id="@+id/statsScroll"
@@ -70,130 +72,149 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp">
+                            android:layout_marginTop="@dimen/common_5_dp">
 
                             <TextView
                                 android:id="@+id/txtcases"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Cases"
-                                android:textSize="30sp"></TextView>
+                                android:fontFamily="@font/gotham_medium"
+                                android:textColor="#474747"
+                                android:textSize="@dimen/h1"/>
 
                             <TextView
                                 android:id="@+id/casescount"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginTop="@dimen/common_5_dp"
                                 android:text="0"
                                 android:textAlignment="textEnd"
-                                android:textSize="20sp"></TextView>
+                                android:fontFamily="@font/gotham_book"
+                                android:textColor="#474747"
+                                android:textSize="@dimen/h2"/>
                         </RelativeLayout>
 
                         <View
                             android:id="@+id/line1"
                             android:layout_width="match_parent"
-                            android:layout_height="5dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/cardview_dark_background"></View>
+                            android:layout_height="@dimen/common_1_dp"
+                            android:layout_marginTop="@dimen/common_10_dp"
+                            android:background="#a5a5a5"/>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp">
+                            android:layout_marginTop="@dimen/common_5_dp">
 
                             <TextView
                                 android:id="@+id/txtrecovered"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Recovered"
-                                android:textSize="30sp"></TextView>
+                                android:textColor="#474747"
+                                android:fontFamily="@font/gotham_medium"
+                                android:textSize="@dimen/h1"/>
 
                             <TextView
                                 android:id="@+id/recovercount"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginTop="@dimen/common_5_dp"
                                 android:text="0"
                                 android:textAlignment="textEnd"
-                                android:textSize="20sp"></TextView>
+                                android:textColor="#474747"
+                                android:fontFamily="@font/gotham_book"
+                                android:textSize="@dimen/h2"/>
                         </RelativeLayout>
 
                         <View
                             android:id="@+id/line2"
                             android:layout_width="match_parent"
-                            android:layout_height="5dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/cardview_dark_background"></View>
+                            android:layout_height="@dimen/common_1_dp"
+                            android:layout_marginTop="@dimen/common_10_dp"
+                            android:background="#a5a5a5"/>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp">
+                            android:layout_marginTop="@dimen/common_5_dp">
 
                             <TextView
                                 android:id="@+id/txtcritical"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Critical"
-                                android:textSize="30sp"></TextView>
+                                android:fontFamily="@font/gotham_medium"
+                                android:textColor="#474747"
+                                android:textSize="@dimen/h1"/>
 
                             <TextView
                                 android:id="@+id/criticalcount"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginTop="@dimen/common_5_dp"
                                 android:text="0"
                                 android:textAlignment="textEnd"
-                                android:textSize="20sp"></TextView>
+                                android:fontFamily="@font/gotham_book"
+                                android:textColor="#474747"
+                                android:textSize="@dimen/h2"/>
                         </RelativeLayout>
 
                         <View
                             android:id="@+id/line3"
                             android:layout_width="match_parent"
-                            android:layout_height="5dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/cardview_dark_background"></View>
+                            android:layout_height="@dimen/common_1_dp"
+                            android:layout_marginTop="@dimen/common_10_dp"
+                            android:background="#a5a5a5"/>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp">
+                            android:layout_marginTop="@dimen/common_5_dp">
 
                             <TextView
                                 android:id="@+id/txtdeaths"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Deaths"
-                                android:textSize="30sp"></TextView>
+                                android:textSize="@dimen/h1"
+                                android:textColor="#474747"
+                                android:fontFamily="@font/gotham_medium" />
 
                             <TextView
                                 android:id="@+id/deathcount"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginTop="@dimen/common_5_dp"
                                 android:text="0"
                                 android:textAlignment="textEnd"
-                                android:textSize="20sp"></TextView>
+                                android:textColor="#474747"
+                                android:fontFamily="@font/gotham_book"
+                                android:textSize="@dimen/h2"/>
                         </RelativeLayout>
 
                         <View
                             android:id="@+id/line4"
                             android:layout_width="match_parent"
-                            android:layout_height="5dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/cardview_dark_background"></View>
+                            android:layout_height="@dimen/common_1_dp"
+                            android:layout_marginTop="@dimen/common_10_dp"
+                            android:background="#a5a5a5"/>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp">
+                            android:layout_marginTop="@dimen/common_5_dp">
 
                             <TextView
                                 android:id="@+id/txttest"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Total Tests"
-                                android:textSize="30sp"></TextView>
+                                android:textSize="@dimen/h1"
+                                android:textColor="#474747"
+                                android:fontFamily="@font/gotham_medium"
+                                />
 
                             <TextView
                                 android:id="@+id/testcount"
@@ -202,94 +223,108 @@
                                 android:layout_marginTop="5dp"
                                 android:text="0"
                                 android:textAlignment="textEnd"
-                                android:textSize="20sp"></TextView>
+                                android:textColor="#474747"
+                                android:fontFamily="@font/gotham_book"
+                                android:textSize="@dimen/h2"/>
                         </RelativeLayout>
 
                         <View
                             android:id="@+id/line5"
                             android:layout_width="match_parent"
-                            android:layout_height="5dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/cardview_dark_background"></View>
+                            android:layout_height="@dimen/common_1_dp"
+                            android:layout_marginTop="@dimen/common_10_dp"
+                            android:background="#a5a5a5"/>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="15dp">
+                            android:layout_marginTop="@dimen/common_5_dp">
 
                             <TextView
                                 android:id="@+id/txttodaycases"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Cases Today"
-                                android:textSize="30sp"></TextView>
+                                android:fontFamily="@font/gotham_medium"
+                                android:textColor="#474747"
+                                android:textSize="@dimen/h1"/>
 
                             <TextView
                                 android:id="@+id/todaycasescount"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginTop="@dimen/common_5_dp"
                                 android:text="0"
                                 android:textAlignment="textEnd"
-                                android:textSize="20sp"></TextView>
+                                android:fontFamily="@font/gotham_book"
+                                android:textColor="#474747"
+                                android:textSize="@dimen/h2"/>
                         </RelativeLayout>
 
                         <View
                             android:id="@+id/line6"
                             android:layout_width="match_parent"
-                            android:layout_height="5dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/cardview_dark_background"></View>
+                            android:layout_height="@dimen/common_1_dp"
+                            android:layout_marginTop="@dimen/common_10_dp"
+                            android:background="#a5a5a5"/>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="@dimen/common_5_dp">
 
                             <TextView
                                 android:id="@+id/txttodaydeaths"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Deaths Today"
-                                android:textSize="30sp"></TextView>
+                                android:fontFamily="@font/gotham_medium"
+                                android:textColor="#474747"
+                                android:textSize="@dimen/h1"/>
 
                             <TextView
                                 android:id="@+id/todaydeathcount"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginTop="@dimen/common_5_dp"
                                 android:text="0"
                                 android:textAlignment="textEnd"
-                                android:textSize="20sp"></TextView>
+                                android:fontFamily="@font/gotham_book"
+                                android:textColor="#474747"
+                                android:textSize="@dimen/h2"/>
                         </RelativeLayout>
 
                         <View
                             android:id="@+id/line7"
                             android:layout_width="match_parent"
-                            android:layout_height="5dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/cardview_dark_background"></View>
+                            android:layout_height="@dimen/common_1_dp"
+                            android:layout_marginTop="@dimen/common_10_dp"
+                            android:background="#a5a5a5"/>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="@dimen/common_5_dp">
 
                             <TextView
                                 android:id="@+id/txttodayrecover"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Deaths Today"
-                                android:textSize="30sp"></TextView>
+                                android:textSize="@dimen/h1"
+                                android:fontFamily="@font/gotham_medium"
+                                android:textColor="#474747"
+                                />
 
                             <TextView
                                 android:id="@+id/todayrecovercount"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="5dp"
+                                android:layout_marginTop="@dimen/common_5_dp"
                                 android:text="0"
                                 android:textAlignment="textEnd"
-                                android:textSize="20sp"></TextView>
+                                android:fontFamily="@font/gotham_book"
+                                android:textSize="@dimen/h2"/>
                         </RelativeLayout>
                     </LinearLayout>
                 </ScrollView>
@@ -302,12 +337,15 @@
                 android:id="@+id/btnsurvey"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="1dp"
+                android:layout_marginTop="@dimen/common_10_dp"
+                android:layout_marginBottom="@dimen/common_10_dp"
+                android:textColor="@color/color_white"
+                android:background="#474747"
+                android:fontFamily="@font/gotham_medium"
+                android:textSize="@dimen/h4"
+                android:layout_margin="@dimen/common_5_dp"
                 android:text="Take Covid Survey" />
 
 
@@ -320,7 +358,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:visibility="visible"
-
         app:headerLayout="@layout/header"
         app:menu="@menu/navigation_menu" />
 
