--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,33 +7,36 @@
     tools:context=".activity.userActivity.LoginActivity"
     android:orientation="vertical"
     android:background="#fff"
-    android:padding="20dp">
+    android:padding="@dimen/common_20_dp">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/common_150_dp"
+        android:layout_height="@dimen/common_150_dp"
         android:src="@drawable/symbol"
         android:transitionName="logo_image"
+        android:layout_gravity="center"
         android:id="@+id/logo_Image"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/logo_name"
-        android:fontFamily="@font/andika"
+        android:fontFamily="@font/gotham_medium"
         android:text="Hello there, Welcome Back"
         android:transitionName="slogan_Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="25sp"
-        android:textColor="#000"/>
+        android:textSize="@dimen/h1"
+        android:layout_marginTop="@dimen/common_12_dp"
+        android:textColor="#474747"/>
     <TextView
         android:id="@+id/slogan_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In to continue"
         android:transitionName="logo_dec"
-        android:textSize="18sp"
-        android:fontFamily="@font/andika"/>
+        android:textSize="@dimen/h3"
+        android:textColor="#a5a5a5"
+        android:fontFamily="@font/gotham_medium"/>
 
 
     <LinearLayout
@@ -49,7 +52,6 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
         <com.google.android.material.textfield.TextInputEditText
-
             android:id="@+id/emailField"
             android:hint="Username"
             android:transitionName="logo_user"
@@ -87,9 +89,12 @@
       android:background="#00000000"
       android:layout_gravity="right"
       android:elevation="0dp"
+      android:fontFamily="@font/gotham_medium"
+      android:textColor="#474747"
       android:text="Forget Password?"
+      android:textSize="@dimen/h5"
       android:transitionName="logo_btn"
-      android:layout_margin="5dp"/>
+      android:layout_margin="@dimen/common_5_dp"/>
 
    <Button
        android:id="@+id/loginButton"
@@ -98,8 +103,10 @@
        android:text="GO"
        android:transitionName="logo_btn"
        android:onClick="loginSubmit"
-       android:background="#000"
-       android:textColor="#fff"
+       android:background="#474747"
+       android:textSize="@dimen/h3"
+       android:fontFamily="@font/gotham_medium"
+       android:textColor="@color/color_white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>
 
@@ -112,9 +119,10 @@
             android:layout_gravity="right"
             android:elevation="0dp"
             android:text="New User? SIGN UP"
-            android:textColor="#000"
-            android:fontFamily="@font/andika"
-            android:layout_margin="5dp"/>
+            android:textColor="#474747"
+            android:fontFamily="@font/gotham_medium"
+            android:textSize="@dimen/h3"
+            android:layout_margin="@dimen/common_5_dp"/>
 </LinearLayout>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
