--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#faf9ff"
     tools:context=".activity.userActivity.QuestionActivity">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout3"
+    <TextView
+        android:id="@+id/txtLabel"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/questionRecycle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="3dp" />
+        android:layout_height="wrap_content"
+        android:text="Complete Survey"
+        android:textSize="@dimen/h2"
+        android:gravity="center"
+        android:fontFamily="@font/gotham_medium"
+        android:textColor="#474747"
+        android:layout_marginTop="@dimen/common_12_dp"
+        android:layout_marginBottom="@dimen/common_12_dp"
+        />
 
 
-    </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/questionRecycle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/txtLabel"
+        android:layout_above="@+id/myquestionResponse" />
 
     <Button
         android:id="@+id/myquestionResponse"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
-
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="105dp"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/common_48_dp"
+        android:layout_alignParentBottom="true"
         android:text="SUBMIT RESPONSE"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />
+        android:background="#474747"
+        android:textColor="@color/color_white"
+        android:fontFamily="@font/gotham_medium"
+        android:textSize="@dimen/h4"
+        />
+</RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
