--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,14 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".activity.userActivity.SignUpActivity"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="@dimen/common_20_dp"
     android:background="#fff">
 
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/common_150_dp"
+        android:layout_height="@dimen/common_150_dp"
         android:src="@drawable/symbol"
+        android:layout_gravity="center"
         android:transitionName="logo_image"
         />
     <TextView
@@ -21,18 +22,21 @@
         android:layout_height="wrap_content"
         android:text="Welcome"
         android:transitionName="logo_text"
-        android:textSize="40sp"
-        android:textColor="#000"
-        android:fontFamily="@font/andika"
-        android:layout_marginTop="-20dp" />
+        android:textSize="@dimen/h1"
+        android:textColor="#474747"
+        android:fontFamily="@font/gotham_medium"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/common_12_dp" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SignUp to Start"
         android:transitionName="logo_dec"
-        android:textSize="18sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
+        android:fontFamily="@font/gotham_medium"
+        android:textColor="#474747"
+        android:textSize="@dimen/h3"
+        android:layout_marginTop="@dimen/common_16_dp"
+        android:layout_marginBottom="@dimen/common_16_dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -92,9 +96,11 @@
         android:layout_height="wrap_content"
         android:text="GO"
         android:onClick="signupSubmit"
-        android:background="#000"
+        android:background="#474747"
+        android:textSize="@dimen/h3"
+        android:fontFamily="@font/gotham_medium"
         android:transitionName="logo_btn1"
-        android:textColor="#fff"/>
+        android:textColor="@color/color_white"/>
 
     <Button
         android:id="@+id/callLogin"
@@ -102,6 +108,10 @@
         android:layout_height="wrap_content"
         android:transitionName="logo_btn2"
         android:text="Already have an account? LogIn"
+        android:textColor="#474747"
+        android:fontFamily="@font/gotham_medium"
+        android:textSize="@dimen/h3"
+        android:layout_margin="@dimen/common_5_dp"
         android:background="#00000000"/>
 
 
