--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#006200EE"
-    android:elevation="4dp"
+    android:elevation="@dimen/common_4_dp"
     app:title=""
     app:navigationIcon="@drawable/nav_button">
 
