--- a/app/src/main/res/layout/activity_covid_questionnaire_redirection.xml
+++ b/app/src/main/res/layout/activity_covid_questionnaire_redirection.xml
@@ -6,17 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activity.userActivity.CovidQuestionnaireRedirection"
-    tools:openDrawer="start">
+    tools:context=".activity.userActivity.CovidQuestionnaireRedirection">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <include
             android:id="@+id/toolbar"
             layout="@layout/main_toolbar" />
-
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -41,7 +41,7 @@
                     android:id="@+id/covidChart"
                     android:layout_width="250dp"
                     android:layout_height="250dp"
-                    android:layout_gravity="center_horizontal"></com.anychart.AnyChartView>
+                    android:layout_gravity="center_horizontal" />
 
 
             </androidx.cardview.widget.CardView>
