--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -11,6 +11,9 @@
         <item
             android:id="@+id/countries"
             android:title="National Covid Statistics" />
+        <item
+            android:id="@+id/appointmentList"
+            android:title="Appointment History" />
 
     </group>
     <item android:title="Profile">
